--- a/dockergen/update-iptables.tmpl
+++ b/dockergen/update-iptables.tmpl
@@ -1,13 +1,22 @@
+# First create our chains if there are not yet there. In reverse order.
+for CHAIN in AFTER_EXTERNAL_IP EXTERNAL_IP; do
+    if ! iptables --numeric -t nat --list $CHAIN >/dev/null 2>&1; then
+        iptables -t nat -N $CHAIN
+        iptables -t nat -A $CHAIN -j RETURN
+        iptables -t nat -I POSTROUTING -m addrtype --src-type LOCAL -j $CHAIN
+    fi
+done
+
 {{ range $externalIP, $containersByExternalIP := groupBy $ "Env.EXTERNAL_IP" }}
     {{ if $externalIP }}
         # First we remove all existing entries.
-        for line in $(iptables --line-numbers --numeric -t nat --list POSTROUTING | awk '$7=="to:{{ $externalIP }}" {print $1}' | tac); do
-            iptables -t nat -D POSTROUTING $line
+        for line in $(iptables --line-numbers --numeric -t nat --list EXTERNAL_IP | awk '$7=="to:{{ $externalIP }}" {print $1}' | tac); do
+            iptables -t nat -D EXTERNAL_IP $line
         done
 
         {{ range $index, $container := $containersByExternalIP }}
             {{ range $index, $network := $container.Networks }}
-                iptables -t nat -I POSTROUTING -s {{ $network.IP }} -j SNAT --to-source {{ $externalIP }}
+                iptables -t nat -I EXTERNAL_IP -s {{ $network.IP }} -j SNAT --to-source {{ $externalIP }}
             {{ end }}
         {{ end }}
     {{ end }}
